update app house construct

--- a/index.html
+++ b/index.html
@@ -44,11 +44,8 @@
 
 <body>
     <script type="module" src="./JavaScript/app.js"></script>
-    <!--<script src="https://threejs.org/build/three.min.js"></script>
-    <script src="https://threejs.org/examples/js/controls/OrbitControls.js"></script>
-    /!-->
-
-
+    <script src="./JavaScript/FBXLoader.js"></script>
+    
     <div id="menuPanel">
         <button id="startButton">Click to Start</button>
     </div>
