--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
         {
             "imports": {
               "three": "https://unpkg.com/three/build/three.module.js",
-              "three/examples/jsm/loaders/FBXLoader": "https://unpkg.com/three/examples/jsm/loaders/FBXLoader.js",
-              "three/examples/jsm/controls/PointerLockControls": "https://unpkg.com/three/examples/jsm/controls/PointerLockControls.js"
+              "three/examples/jsm/loaders/GLTFLoader": "https://unpkg.com/three/examples/jsm/loaders/GLTFLoader.js",
+              "three/examples/jsm/controls/PointerLockControls": "https://unpkg.com/three/examples/jsm/controls/PointerLockControls.js",
+              "three/examples/jsm/math/Octree": "https://unpkg.com/three/examples/jsm/math/Octree",
+              "three/examples/jsm/math/Capsule": "https://unpkg.com/three/examples/jsm/math/Capsule"
             }
           }
     </script>
@@ -44,7 +46,6 @@
 
 <body>
     <script type="module" src="./JavaScript/app.js"></script>
-    <script src="./JavaScript/FBXLoader.js"></script>
     
     <div id="menuPanel">
         <button id="startButton">Click to Start</button>
