--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             "imports": {
               "three": "https://unpkg.com/three/build/three.module.js",
               "three/examples/jsm/loaders/GLTFLoader": "https://unpkg.com/three/examples/jsm/loaders/GLTFLoader.js",
+              "three/examples/jsm/loaders/FBXLoader": "https://unpkg.com/three/examples/jsm/loaders/FBXLoader.js",
               "three/examples/jsm/controls/PointerLockControls": "https://unpkg.com/three/examples/jsm/controls/PointerLockControls.js",
               "three/examples/jsm/math/Octree": "https://unpkg.com/three/examples/jsm/math/Octree",
               "three/examples/jsm/math/Capsule": "https://unpkg.com/three/examples/jsm/math/Capsule"
